created flask front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chromesthesia</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 </head>
 <body style="background-color:#FED982;">
 		
-    <img src="chromesthesia.png">
+    <img src="{{url_for('static', filename='chromesthesia.png')}}" />
     
     <div class="nav">
     
