just updating whatever I have

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,9 @@
     <img src="{{url_for('static', filename='chromesthesia.png')}}" />
     
     <div class="nav">
-    
+        
         <input type="text" placeholder="Song Name...">
+        <button>Search</button>
     
     </div>
     
