connected flask and python

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
     <img src="{{url_for('static', filename='chromesthesia.png')}}" />
     
     <div class="nav">
-        
-        <input type="text" placeholder="Song Name...">
+        <form action="/hi">
+        <input type="text" placeholder="Song Name..." name="color">
         <button>Search</button>
-    
+        </form>
     </div>
     
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdc7I722I51mcxBiKB72EhNeLBb06bNIrdJG2wug2c7jmnKNQ/viewform"><p style="text-align:center">Think the color is wrong? Click here to give your input</p></a>
