changed parameters for color selection

--- a/templates/hi.html
+++ b/templates/hi.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chromesthesia</title>
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style2.css') }}">
+
 
 </head>
-<body>
-<p>{{color}}</p>
+<body style = "background-color: {{color}};">
+<div class = "decor">
+	<p>The color that reflects you song is: </p>
+	<p><u>{{color}}</u></p>
+</div>
 </body>
 </html>
