--- a/templates/hi.html
+++ b/templates/hi.html
@@ -10,7 +10,7 @@
 </head>
 <body style = "background-color: {{color}};">
 <div class = "decor">
-	<p>The color that reflects you song is: </p>
+	<p>The color that reflects your song is: </p>
 	<p><u>{{color}}</u></p>
 </div>
 </body>
