--- a/templates/hi.html
+++ b/templates/hi.html
@@ -9,9 +9,19 @@
 
 </head>
 <body style = "background-color: {{color}};">
+
 <div class = "decor">
 	<p>The color that reflects your song is: </p>
-	<p><u>{{color}}</u></p>
 </div>
+
+<div class= "color">
+    <p>{{color}}</p>
+</div>
+
+<div class="form">
+    <a href="">think the color is wrong? click here to give your input</a>
+</div>
+
 </body>
+
 </html>
