added google form link

--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="form">
-    <a href="">think the color is wrong? click here to give your input</a>
+    <a href="https://forms.gle/fM4iFeoYFL8zrhX86">think the color is wrong? click here to give your input</a>
 </div>
 
 </body>
