created internal server error page

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     
     <div class = "about">
     
-        <p>Chromestheisa is a particular type of synesthesia in which sound involuntarilyarily evokes an experience of color, shape, and movement</p>
+        <p>Chromestheisa is a particular type of synesthesia in which sound involuntarily evokes an experience of color, shape, and movement</p>
     
     </div>
 
