--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <form action="/hi">
         <input type="text" placeholder="Song Name..." name="color">
         <button>Search</button>
+        
         </form>
 
     </div>
@@ -31,7 +32,7 @@
     
     <div class = "about">
     
-        <p>Chromestheisa is a particular type of synesthesia in which sound involuntarily evokes an experience of color, shape, and movement</p>
+        <p>Chromesthesia is a particular type of synesthesia in which sound involuntarily evokes an experience of color, shape, and movement</p>
     
     </div>
 
