mobile firnedly results page

--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -1,10 +1,8 @@
 .decor {
 	
-	position: absolute;
-	width: 646px;
-	height: 129px;
-	left: 397px;
-	top: 152px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
 	
 	font-family: Roboto;
 	font-style: normal;
@@ -18,11 +16,9 @@
 }
 	
 .color{
-	position: absolute;
-	width: 581px;
-	height: 68px;
-	left: 429px;
-	top: 313px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
 	
 	font-family: Roboto;
 	font-style: normal;
@@ -35,11 +31,9 @@
 }	
 
 .form{
-	position: absolute;
-	width: 556px;
-	height: 28px;
-	left: 454px;
-	top: 590px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
 	
 	font-family: Roboto;
 	font-style: normal;
