fixed design stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
     <!--<img src="{{url_for('static', filename='chromesthesia.png')}}"/>-->
     <img src="/static/chromesthesia.png"/>
 
+    <div class= "all">
+
     <div class="text">
         <p>enter your favorite song and we'll tell you what color it is!</p>
     </div>
@@ -21,7 +23,7 @@
     <div class="nav">
 
         <form action="/hi">
-        <input type="text" placeholder="Song Name..." name="color">
+        <input type="text" placeholder="Song Name..." name="color" size="50">
         <button>Search</button>
         
         </form>
@@ -33,6 +35,8 @@
     
         <p>Chromesthesia is a particular type of synesthesia in which sound involuntarily evokes an experience of color, shape, and movement</p>
     
+    </div>
+
     </div>
 
 </body>
