--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,29 @@
 .nav {
 
     display: flex;
-    flex-direction: horizontal;
+    flex-direction: column;
     align-items: center;
     padding: 10px;
     font-size: 17px;
 
-    width: 45%;
+    width: fit-content;
 
-    margin: 0 auto;
+    margin: auto;
     display: block;
 
     text-align: left; 
     
 }
 
+element.style{
+    width: fit-content;
+    margin: auto;
+}
+
 input{
 
     [type=text]
+
 }
 
 .text {
@@ -50,4 +56,12 @@ input{
     text-align: center;
     
     color: #000000;
+}
+
+.all{
+
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+
 }
