edited error page a bit

--- a/templates/error.html
+++ b/templates/error.html
@@ -12,7 +12,7 @@
 <body style="background-color:#FED982;">
 
 <div class = "text">
-	<p>Oops! We don't have your song at the moment</p>
+	<p>Oops! We don't have your song at the moment or our app crashed :(</p>
 </div>
 
 <div class="form">
